# TBSL-ERP

./: Makefile  README.md
apps/api/: .env  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_core_schema.py  0003_transactions.py  0004_auth_api_keys.py  0005_reorder_webhooks.py  0006_alerts.py  0007_ai_documents.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  provider.py  regex_provider.py  stub_provider.py
apps/api/app/core/: __init__.py  config.py  db.py  errors.py  logging.py
apps/api/app/core/security/: __init__.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/repositories/: __init__.py  base.py  customers.py  items.py  suppliers.py
apps/api/app/routers/: alerts.py  auth.py  catalog.py  integrations.py  reorder.py
apps/api/app/schemas/: alerts.py  auth.py  reorder.py
apps/api/app/services/: ai_confirm_service.py  ai_service.py  alert_service.py  purchase_service.py  reorder_service.py  sales_service.py  stock_service.py  webhook_service.py
apps/api/scripts/: import_all.py  import_customers.py  import_items.py  import_suppliers.py  utils.py
apps/api/tbslerp_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_auth.py  test_transactions.py
apps/data/: 3281_Distributo_butor_List_6_2025_12_13_154139.csv  3322_Customer_L_tomer_List_6_2025_12_13_153515.csv
apps/web/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
apps/web/.nuxt/: nitro.json  (+4 more)
infra/: docker-compose.yml
(+26 files in other folders)
